--- a/.github/ISSUE_TEMPLATE/review.yml
+++ b/.github/ISSUE_TEMPLATE/review.yml
@@ -1,4 +1,4 @@
-name: Accessibility Review
+name: Morncast Review
 description: I would like my website to have an accessibility review
 title: "Accessibility Review"
 labels: [review my website]
